--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
           <button class="operator equals" id="equals">=</button>
         </div>
         <div id="history">
-          <h3>History:</h3>
           <div id="history-log"></div>
+          <h3 class="h3-history">History</h3>
         </div>
       </div>
-      
     </div>
   </body>
 </html>
